# OnePunch

./: .env  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  GEMINI.md  LICENSE  MIGRATION.md  README.md
.devcontainer/: Dockerfile
.github/workflows/: install.yml  rust.yml  standalone.yml
all/: CMakeLists.txt
include/: asmutils.h  assembler.h  common.h  minimizer.h  onepunch.h  preprocessor.h  register.h  rust_asmutils_bridge.h  rust_preprocessor_bridge.h  rust_register_bridge.h  rust_solver_bridge.h  rust_utils_bridge.h  solver.h  symbolic_executor.h  utils.h
rust-onepunch/: CMakeLists.txt  Cargo.toml  bindings.h  build.rs  cbindgen.toml
rust-onepunch/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
rust-onepunch/src/: asmutils.rs  asmutils_ffi.rs  ffi.rs  lib.rs  preprocessor.rs  preprocessor_ffi.rs  register.rs  solver.rs  solver_ffi.rs  symbolic_executor.rs  symbolic_executor_ffi.rs  utils.rs  utils_ffi.rs
src/: asmutils.rs  core.rs  lib.rs  main.rs  search.rs  types.rs  utils.rs
srcs/: asmutils.cpp  assembler.cpp  minimizer.cpp  onepunch.cpp  preprocessor.cpp  register.cpp  rust_asmutils_bridge.cpp  rust_preprocessor_bridge.cpp  rust_register_bridge.cpp  rust_solver_bridge.cpp  rust_utils_bridge.cpp  solver.cpp  symbolic_executor.cpp  utils.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  onepunch_test.cpp  rust_asmutils_test.cpp  rust_bridge_test.cpp  rust_preprocessor_test.cpp  rust_solver_test.cpp  rust_utils_test.cpp
tests/: integration.rs
